--- a/WebApplication3/WebApplication3/WebApplication3.csproj
+++ b/WebApplication3/WebApplication3/WebApplication3.csproj
@@ -25,8 +25,10 @@
 
     <ItemGroup>
       <Folder Include="Migrations\" />
-      <Folder Include="Services\" />
-      <Folder Include="Views\User\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Order\Index.cshtml" />
     </ItemGroup>
 
 </Project>
